# Rishi-Khatri-TaskManagement

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/: settings.py  urls.py
scripts/: run_develop.sh
static/css/: task.css
task/: models.py  serializers.py  views.py
task/migrations/: 0001_initial.py
templates/: index.html
