
[tool.poetry]
name = "task management system"
version = "0.1.0"
description = ""
authors = ["khatririshi2430@gmail.com"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
Django = "^4.2"
django-cors-headers = "*"
django-environ = "*"
psycopg2-binary = "*"
python = "^3.10"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
django-stubs = { version = "*", allow-prereleases = true }
ipython = "*"
pytest-django = "*"
pytest-icdiff = "*"
pytest-ordering = "*"
pytest-profiling = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"